--- a/obsidian/gymnasiearbeteNotes/.obsidian/workspace
+++ b/obsidian/gymnasiearbeteNotes/.obsidian/workspace
@@ -1,27 +1,16 @@
 {
   "main": {
-    "id": "27e19eee6d481388",
+    "id": "e6b922195c5fde48",
     "type": "split",
     "children": [
       {
-        "id": "bae869f237007ea1",
+        "id": "3ab28b3ec0ac8443",
         "type": "leaf",
         "state": {
           "type": "markdown",
           "state": {
             "file": "Anteckningar.md",
             "mode": "source"
-          }
-        }
-      },
-      {
-        "id": "b985cd7b50badace",
-        "type": "leaf",
-        "state": {
-          "type": "markdown",
-          "state": {
-            "file": "Anteckningar.md",
-            "mode": "preview"
           }
         }
       }
@@ -97,11 +86,12 @@
     "width": 300,
     "collapsed": true
   },
-  "active": "bae869f237007ea1",
+  "active": "3ab28b3ec0ac8443",
   "lastOpenFiles": [
     "Anteckningar.md",
-    "Todo.md",
     "Untitled.md",
+    "y=a*sinx+b*cosx.md",
+    "Todo.md",
     "Presentation.md"
   ]
 }
